--- a/src/utils/tst/CMakeLists.txt
+++ b/src/utils/tst/CMakeLists.txt
@@ -4,7 +4,8 @@ file (GLOB UtilsTestSources *.cpp)
 
 add_executable(${PROJECT_NAME} ${UtilsTestSources})
 if(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-    target_link_libraries(${PROJECT_NAME} utils gtest gtest_main rt)
+    target_link_libraries(${PROJECT_NAME} utils gtest gtest_main)
+    #target_link_libraries(${PROJECT_NAME} utils gtest gtest_main rt)
 else()
     target_link_libraries(${PROJECT_NAME} utils gtest gtest_main)
 endif()
